--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,8 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - href: blogs.qmd
+        text: Blog Posts
       - href: resources.qmd
         text: Resources
       - href: cv/Heather Childers CV.pdf
