--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,11 @@
 /.quarto/
 Geospatial_blogs/2023-12-15/data/
 blog_posts/2024-3-16/data/
+
+blog_posts/CopyOf2023-12-9/data/
+blog_posts/CopyOf2023-11-10/data/
+blog_posts/CopyOf2023-12-15/data/
+
 Geospatial_blogs/2023-12-9/data/
 Geospatial_blogs/2023-11-10/data/
+Geospatial_blogs/2023-12-15/data/
